# EECS-476

PS1/ps1_dxg397_stdr_commander.tar/src/: stdr_open_loop_commander.cpp
PS2/: CMakeLists.txt
PS2/src/: my_lidar_alarm.cpp
PS3/: CMakeLists.txt  README.md
PS3/src/: wall_follower.cpp
PS4/: CMakeLists.txt  README.md  package.xml
PS4/include/PS4_traj_builder/: PS4_traj_builder.h
PS4/src/: ps4_lidar_alarm.cpp  ps4_pub_des_state.cpp  ps4_pub_des_state.h  ps4_pub_des_state_main.cpp  ps4_traj_builder.cpp
PS5/: my_pub_des_state_path_client.cpp  my_steering_algorithm.h
PS6/: baxter_control.yaml  baxter_controls.xacro  baxter_on_pedestal.xacro  baxter_on_pedestal_with_joint_control.launch  baxter_traj_control.yaml
